<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_retro"
    android:fillViewport="true"
    tools:context=".feature.detail_movie.presentation.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_retro"
        tools:context=".feature.detail_movie.presentation.DetailMovieActivity">

        <ImageView
            android:id="@+id/imgBackdropPath"
            android:layout_width="wrap_content"
            android:layout_height="380dp"
            android:contentDescription="@string/movie_backdrop"
            android:foreground="@drawable/gradient"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/btnBackDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:textColor="@color/white_solid_retro"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imgBackdropPath"
            app:layout_constraintStart_toStartOf="@+id/imgBackdropPath"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Wonder Woman" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/grey_light_retro"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="Action, Romance" />

        <LinearLayout
            android:id="@+id/rowRatingBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenre">

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="8dp"
                android:textColor="@color/yellow_light_retro"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="7.5" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:isIndicator="true"
                android:max="5"
                android:numStars="5"
                android:progressBackgroundTint="@color/grey_dark_retro"
                android:progressTint="@color/yellow_light_retro"
                android:scaleX="1"
                android:scaleY="1"
                tools:rating="1.3" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/grey_light_retro"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/rowRatingBar"
            app:layout_constraintStart_toStartOf="@+id/rowRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/rowRatingBar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/red_retro"
            android:contentDescription="@string/floating_button_favorite"
            android:src="@drawable/ic_favorite_inactive"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>